--- a/ProjetoLibDowload/app/src/main/res/layout/activity_main.xml
+++ b/ProjetoLibDowload/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
         android:id="@+id/botaovideo"
         android:layout_width="wrap_content"
@@ -29,6 +20,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.107" />
+
+    <Button
+        android:id="@+id/botaoMusica"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Música"
+        tools:layout_editor_absoluteX="147dp"
+        tools:layout_editor_absoluteY="168dp" />
 
 
 </android.support.constraint.ConstraintLayout>
