--- a/ProjetoLibDowload/app/src/main/res/layout/activity_main.xml
+++ b/ProjetoLibDowload/app/src/main/res/layout/activity_main.xml
@@ -25,9 +25,25 @@
         android:id="@+id/botaoMusica"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="48dp"
         android:text="Música"
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="168dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/botaovideo" />
+
+    <Button
+        android:id="@+id/baixarimg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="64dp"
+        android:text="imgD"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/botaoMusica" />
 
 
 </android.support.constraint.ConstraintLayout>
