--- a/ProjetoLibDowload/app/src/main/res/layout/activity_reproducao_musica.xml
+++ b/ProjetoLibDowload/app/src/main/res/layout/activity_reproducao_musica.xml
@@ -8,7 +8,7 @@
 
     <SeekBar
         android:id="@+id/seekVolume"
-        android:layout_width="250"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="51dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -38,7 +38,8 @@
         app:layout_constraintEnd_toStartOf="@+id/buttonStop"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/buttonPlay"
-        tools:layout_editor_absoluteY="316dp" />
+        tools:layout_editor_absoluteY="316dp"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/buttonStop"
@@ -49,5 +50,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/buttonPause"
-        tools:layout_editor_absoluteY="316dp" />
+        tools:layout_editor_absoluteY="316dp"
+        tools:ignore="MissingConstraints" />
 </android.support.constraint.ConstraintLayout>
