--- a/ProjetoLibDowload/app/src/main/res/layout/activity_reproducao_musica.xml
+++ b/ProjetoLibDowload/app/src/main/res/layout/activity_reproducao_musica.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ReproducaoMusicaActivity">
+    tools:context=".Activitys.ReproducaoMusicaActivity">
 
     <SeekBar
         android:id="@+id/seekVolume"
