--- a/ProjetoLibDowload/app/src/main/res/layout/musicaslistadas.xml
+++ b/ProjetoLibDowload/app/src/main/res/layout/musicaslistadas.xml
@@ -1,34 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
+
 
     <LinearLayout
+        android:id="@+id/musicalistalayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:orientation="vertical"
         android:padding="10dp"
-        android:paddingLeft="10dp">
+        android:paddingLeft="10dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <TextView
-            android:id="@+id/nomevideo"
+            android:id="@+id/nomemusica"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="5dp"
-            android:text="NameVideo" />
+            android:text="NameMusica" />
 
         <TextView
-            android:id="@+id/baixarvideo"
+            android:id="@+id/baixarmusica"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView" />
 
         <Button
-            android:id="@+id/buttondowload"
+            android:id="@+id/buttondowloadmusica"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
             android:paddingTop="10dp"
-            android:text="dowload" />
+            android:text="dowloadMusica" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
