--- a/ProjetoLibDowload/app/src/main/res/layout/activity_cadastro_contato.xml
+++ b/ProjetoLibDowload/app/src/main/res/layout/activity_cadastro_contato.xml
@@ -139,7 +139,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="Button"
+        android:text="Download"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
